update song reorder
